# hierarchical-cache-simulation

./: .gitignore  AGENT.md  PROJECT_STATE.md  README.md  pyproject.toml  simulation_build_log.md
docs/: architecture.md  experiment_results_summary.md  models_and_physics.md
scripts/: analyze_trace.py  analyze_two_trace_weighted_overlap.py  edge_sweep_experiment.py  run_multi_edge_simulation.py  run_simulation.py  run_simulation_demo.py  two_edge_parent_hitrate_experiment.py  two_edge_parent_sweep_experiment.py
src/simulator/data_access/: parser.py  trace_aligner.py
src/simulator/engine/: multi_edge_orchestrator.py  orchestrator.py
src/simulator/models/: lru_cache.py
tests/: test_data_access.py  test_engine.py  test_models.py  test_two_edge_parent_hitrate_experiment.py  test_two_edge_parent_sweep_experiment.py  test_two_trace_weighted_overlap.py
