[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical-cache-simulation"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = true
